<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FinalFragment"
    android:background="@drawable/hero_bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

         <ImageView
             android:id="@+id/hero_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/hero_name"
            android:text="@string-array/hero_name"
            android:textSize="20dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        </LinearLayout>

        <TextView
            android:id="@+id/hero_backstory"
            android:text="@string-array/hero_backstory"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:text="Powers"
            android:textSize="20dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>


        <Button
            android:id="@+id/power1"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/hero_button"
            android:drawableLeft="@drawable/turtlepower_icon"
            android:text="@string/p1"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:clickable="false"/>

        <Button
            android:id="@+id/power2"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/hero_button"
            android:drawableLeft="@drawable/lightning_icon"
            android:text="@string/p2"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:clickable="false"/>

        <Button
            android:id="@+id/startOverBtn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/b6"
            android:textColor="@color/bgcolor"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/hero_solid_button"
            android:backgroundTint="@color/textColor"/>

    </LinearLayout>


</FrameLayout>